2009-08-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs:
	  Before adding refs, resolve them against the target
	  framework.

2009-08-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.WebReferences/Library.cs: VS uses "Web
	  References" instead of "WebReferences"

	* MonoDevelop.WebReferences/DiscoveryProtocol.cs: Ignore
	  unknown discovery results.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/MonoDevelop.WebReferences.Dialogs.WebReferenceDialog.cs:
	  Flush.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.WebReferences\Library.cs:
	* MonoDevelop.WebReferences\WebReferenceItemCollection.cs:
	* MonoDevelop.WebReferences.NodeBuilders\WebReferenceFolderNodeBuilder.cs:
	  Use the new FilePath class for handling file and directory
	  paths.

2009-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.WebReferences/WebReferenceItem.cs: fixed
	  compilation error.

2009-04-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.WebReferences/WebReferenceItem.cs: Applied patch
	  from Luciano N. Callero <lnc19@hotmail.com> : "Fix Web
	  Reference Update bug that prevent a web reference from being
	  update."


2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.WebReferences.csproj: don't require specific
	gtk-sharp version.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.WebReferences.addin.xml: Bump MD version.

2009-03-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs:
	  Fix framework IDs.

2009-02-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.WebReferences.addin.xml: Track merge of the
	  project pad context menu.

2009-02-17  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs: Flush.

2009-02-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.WebReferences/CodeGenerator.cs: Properly fix