@@ -1,3 +1,8 @@
+2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.WebReferences\Library.cs: Fix cast exception on
+	  MS.NET.
+
 2009-08-13  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.WebReferences.Commands/WebReferenceCommandHandler.cs:
